--- a/src/scss/variables/_colors.scss
+++ b/src/scss/variables/_colors.scss
@@ -30,6 +30,10 @@ $colors: (
               #ececec,
               var(--clr--primary),
             ),
+            bg-cyan: (
+              var(--clr--cyan),
+              var(--clr--primary),
+            ),
             title: (
                 var(--clr--cyan),
                 var(--clr--white),
