--- a/src/scss/pages/_aboutUs.scss
+++ b/src/scss/pages/_aboutUs.scss
@@ -8,8 +8,7 @@
     @include before {
         inset: 0;
         @include size(100%);
-        background: var(--clr--cyan);
-        background: var(--clr--bg-alt);
+        background: var(--clr--bg-cyan);
         z-index: -1;
         opacity: 0.66;
         // opacity: 0.8;
